kubernetes/headscale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
  namespace: headscale
spec:
  selector:
    app: headscale
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP
    - name: grpc
      port: 50443
      targetPort: grpc
      protocol: TCP
  type: ClusterIP
