kubernetes/headscale/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headscale
  namespace: headscale
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`headscale.tehmatt.com`)
      kind: Rule
      services:
        - name: headscale
          port: 8080
  tls: {}
